--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Home page!!!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aspernatur aliquid veniam iure, possimus eligendi quae qui odit nam illum, doloremque ab voluptate repudiandae id autem nesciunt labore aut officiis?</p>
 </body>
 </html>
